--- a/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
+++ b/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
@@ -31,8 +31,7 @@
           <mat-datepicker #endDatePicker></mat-datepicker>
         </mat-form-field>
       </p>
-      <p>Insert expand/collapse all buttons here?</p>
-      <p>Insert temproary exclude toggle button here</p>
+      <p>Insert Filter(s)</p>
       <button mat-raised-button color="accent" (click)="applyChanges()"> OK </button>
     </div>
   </div>
