--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -191,7 +191,8 @@ $shiftStyle: cubic-bezier(0.175, 0.885, 0.32, 1.1);
     width: 90%;
     height: 70%;
     margin-bottom: 7px !important;
-    }
+    opacity: 0.9;
+}
 
 
 
