--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -161,7 +161,7 @@
                             </ng-container>
                             <ng-container matColumnDef="MailType">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn"> Mail Type
-                                    </th>
+                                </th>
                                 <!-- <td mat-cell *matCellDef="let element" class="mailLevelColumn"> {{element.MailType}} </td> -->
                                 <td mat-cell *matCellDef="let element" class="mailLevelColumn" [ngClass]="{
                                 'font-mailType-lg': GetVisibilityStyle(! element.Measure.Expanded) == 'collapse',
@@ -298,13 +298,13 @@
                                                 </ng-container>
                                                 <ng-container matColumnDef="CampaignName">
                                                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn"> Campaign
-                                                        </th>
+                                                    </th>
                                                     <!-- <td mat-cell *matCellDef="let element" class="mailLevelColumn"> {{element.CampaignName}} </td> -->
                                                     <td mat-cell *matCellDef="let element" class="mailLevelColumn" [ngClass]="{
                                                     'font-campaignName-lg': GetVisibilityStyle(! element.Measure.Expanded) == 'collapse',
                                                     'font-sm': GetVisibilityStyle(! element.Measure.Expanded) == 'expand'
                                                 }"> {{element.CampaignName}}
-                                                        </td>
+                                                    </td>
                                                     <td mat-footer-cell *matFooterCellDef class="mailLevelColumn campaignFooterCell"> Total
                                                         {{element.MailType}} </td>
                                                 </ng-container>
@@ -457,13 +457,13 @@
                                                                     </ng-container>
                                                                     <ng-container matColumnDef="PhaseName">
                                                                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn"> Phase
-                                                                            </th>
+                                                                        </th>
                                                                         <!-- <td mat-cell *matCellDef="let element" class="mailLevelColumn"> {{element.PhaseName}}</td> -->
                                                                         <td mat-cell *matCellDef="let element" class="mailLevelColumn" [ngClass]="{
                                                                         'font-phase-lg': GetVisibilityStyle(! element.Measure.Expanded) == 'collapse',
                                                                         'font-sm': GetVisibilityStyle(! element.Measure.Expanded) == 'expand'
                                                                     }"> {{element.PhaseName}}
-                                                                            </td>
+                                                                        </td>
                                                                         <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total
                                                                             {{element.CampaignName}}
                                                                         </td>
@@ -621,8 +621,9 @@
                                                                                     <div class="row">
                                                                                         <div class="col-12">
                                                                                             <a class="aPackagePDF">Package
-                                                                                                PDF</a><p class="pPackageDoubling">
-                                                                                            - Doubling Days ({{element.DoublingDays}})</p>
+                                                                                                PDF
+                                                                                            </a><p class="pPackageDoubling">
+                                                                                                - Doubling Days ({{element.DoublingDays}})</p>
                                                                                         </div>
                                                                                     </div>
 
@@ -653,7 +654,20 @@
                                                                                             <th mat-header-cell *matHeaderCellDef class="descriptionColumn">
                                                                                                 Description
                                                                                             </th>
-                                                                                            <td mat-cell *matCellDef="let element" class="descriptionColumn" (click)="NavigateToListPerformance(element.ListOwner, element.ListManager, element.Recency, startDate, endDate)">{{element.MailDescription}}
+                                                                                            <td mat-cell *matCellDef="let element" class="descriptionColumn">
+                                                                                                <ng-container *ngIf="element.ListOwner == 0; then house; else prospect">
+                                                                                                </ng-container>
+                                                                                                <ng-template #prospect>
+                                                                                                     <a title="{{ element.ListOwnerName }}"
+                                                                                                    (click)="NavigateToListPerformance(element.ListOwner, 0, 0, startDate, endDate)">
+                                                                                                    {{element.ListOwnerAbr}} / </a>
+                                                                                                <a title="{{ element.ListManagerName }}" (click)="NavigateToListPerformance(element.ListOwner, element.ListManager, 0, startDate, endDate)">{{element.ListManagerAbr}} / </a> <a (click)="NavigateToListPerformance(element.ListOwner, element.ListManager, element.Recency, startDate, endDate)">
+                                                                                                        {{element.RecencyString}}
+                                                                                                    </a>
+                                                                                                </ng-template>
+                                                                                                <ng-template #house>
+                                                                                                    {{ element.MailDescription }}
+                                                                                                </ng-template>
                                                                                             </td>
                                                                                             <td mat-footer-cell *matFooterCellDef class="descriptionColumn"></td>
                                                                                         </ng-container>
