--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -257,4 +257,10 @@ width:100% !important;
 font-size:inherit;
 }
 
+.prospectListDescription{
+  a{
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
 
