--- a/src/app/Returns/Subviews/list-performance/list-performance.component.html
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="ListPerformanceArr">
-<button (click)='HideList()'> Back </button>
+<div *ngIf="ListPerformanceArr" style="margin-top:100px">
 <table mat-table [dataSource]="ListPerformanceArr" matSort (matSortChange)="SortFunction($event, ListPerformanceArr)" multiTemplateDataRows>
   <ng-container matColumnDef="Expand">
     <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
