--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -7,7 +7,8 @@
   <div class="collapse navbar-collapse" id="navbarContent" >
     <ul class="navbar-nav mr-auto">
       <li class="nav-item mainNavItem">
-        <button routerLink="returns" class="btn navbarBtn">Reporting</button>
+        <button  class="btn navbarBtn" (click)="NavigateToHome()">Reporting</button>
+        <!-- routerLink="returns" -->
         <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
       </li>
       <li class="nav-item mainNavItem">
